--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@ main {
     font-style: italic;
     color: #777;
 }*/
-#conversion-form h2 {
-    font-weight: 600;
-    margin-bottom: 15px;
+#conversion-form h4 {
+    margin-top: 0;
 }
 #conversion-form p {
     margin-bottom: 5px;
@@ -41,22 +40,37 @@ main {
 #conversion-form {
     padding: 20px 20px 24px;
     background: white;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.2);
-    width: 520px;
-    margin: 0 auto;
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.3);
+    margin-bottom: 2em;
+/*    width: 520px;
+    margin: 0 auto;*/
+}
+#conversion-form:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 #conversion-form label {
     cursor: pointer;
 }
-#list-options {
-    margin-bottom: 5px;
+#conversion-form input {
+    outline: none;
+    box-shadow: none;
+    line-height: 20px;
+}
+#conversion-form #list-options {
+    margin: 0 0 2px 0;
     display: inline-block;
 }
-#show-input-option {
-    display: inline;
+#conversion-form #list-options li {
+    /*border-bottom: 0;*/
+}
+#conversion-form #show-input-option {
+    /*display: inline;*/
+    display: none;
 /*    color: silver;*/
 }
-.convert-list-options {
+#conversion-form .convert-list-options {
     display: inline;
     padding: 5px 7px;
     border: 1px solid #d9d9d9;
@@ -64,49 +78,53 @@ main {
     font-size: 0.8em;
     color: silver;
     cursor: pointer;
-    margin-left: -1px;
-    border-radius: 2px 2px 0 0;
+    margin-left: 0;
+    border-radius: 5px 5px 0 0;
 }
-.convert-list-options:first-child {
+#conversion-form .convert-list-options:first-child {
     margin-left: 0;
 }
-.convert-list-options.active {
+#conversion-form .convert-list-options.active {
     background: whitesmoke;
 /*    color: darkgray;*/
     color: gray;
 }
-.convert-list-options.no-border {
+#conversion-form .convert-list-options.no-border {
     color: gray;
     border: 0;
 }
-.convert-list-options input {
+#conversion-form .convert-list-options input {
     margin-right: 5px;
+    margin-bottom: 0;
 }
 #conversion-form input[type="submit"] {
 /*    display: none;*/
     float: right;
-    margin-right: 40px;
-    padding: 7px 20px;
+    margin-right: 0px;
+    line-height: 20px;
+    padding: 5px 20px;
     background: transparent;
     outline: none;
     border: 1px solid #d9d9d9;
-    border-radius: 2px;
-    margin-top: -4px;
+    border-radius: 5px;
+    font-size: 1em;
+    /*margin-top: -4px;*/
 }
 #conversion-form select {
-    background: url(img/up-down-arrow.png) 98% no-repeat whiteSmoke;
+    background: url(img/up-down-arrow.png) 96% no-repeat whiteSmoke;
     border: 1px solid gainsboro;
-    font-size: 13px;
+    font-size: 0.85em;
     line-height: 20px;
-    padding: 5px 16px 5px 5px;
+    padding: 5px 16px 5px 1em;
     vertical-align: middle;
     -webkit-appearance: button;
     appearance: button;
     margin-bottom: 10px;
 }
 #conversion-type select {
-    width: 440px;
-    border-radius: 0 0 2px 2px;
+    /*width: 440px;*/
+    background-position: 98%;
+    border-radius: 0 5px 5px 5px;
     margin-top: -1px;
     display: block;
 }
@@ -116,10 +134,11 @@ main {
     font-size: 120%;
     height: 40px;
     padding: 1px 6px;
-    border-radius: 2px 2px 0 0;
-    width: 440px;
+    border-radius: 0px 5px 0 0;
+    /*width: 440px;*/
     display: none;
     margin-top: -1px;
+    margin-bottom: 0;
 }
         #convert_string::-webkit-input-placeholder { 
             color: silver; 
@@ -156,37 +175,131 @@ main {
 #conversion-units {
     padding-top: 5px;
     margin-bottom: 5px;
+    position: relative;
 }
 #conversion-units .entry {
     display: inline-block;
-    width: 200px;
+    /*width: 200px;*/
+}
+#conversion-units .from-div {
+    width: 47%;
+    float: left;
+    /*margin-right: 3%;*/
+    /*display: inline-block;*/
+    margin-bottom: 0.5em;
+    position: relative;
+}
+#conversion-units .to-div {
+    width: 47%;
+    float: right;
+    /*margin-left: 3%;*/
+    /*display: inline-block;*/
+    margin-bottom: 0.5em;
+    position: relative;
+}
+#conversion-form #to_value {
+    background: #fefefe;
 }
 #conversion-units .entry input {
     border: 1px solid #d9d9d9;
     border-top: 1px solid silver;
     font-size: 180%;
-    height: 40px;
+    height: 44px;
+    line-height: 20px;
     padding: 1px 6px;
     text-align: center;
-    border-radius: 2px 2px 0 0;
-    width: 200px;
+    border-radius: 5px 5px 0 0;
+    /*width: 200px;*/
     display: block;
+    margin: 0;
 }
 #conversion-units .entry select {
-    border-radius: 0 0 2px 2px;
+    border-radius: 0 0 5px 5px;
     margin-top: -1px;
     display: block;
-    width: 200px;
+    /*width: 200px;*/
 }
 #conversion-units #equal-sign {
+/*    float: left;
     display: inline-block;
     line-height: 44px;
-    width: 42px;
+    width: 40px;
     text-align: center;
-    font-size: 26px;
-    color: #878787;
-    padding-top: 25px;
+    font-size: 180%;
+    color: silver;
+    padding-top: 30px;
     vertical-align: top;
     margin-left: -4px;
-    margin-right: -4px;
+    margin-right: -4px;*/
+    
+    position: absolute;
+    top: 40px;
+    left: calc(50% - 20px);
+    font-size: 180%;
+    text-align: center;
+    width: 40px;
+    color: silver;
+}
+#conversion-form .controls {
+    clear: both;
+}
+
+/*
+ * WIDGET specific style
+ */
+.jkl_unit_converter_widget #conversion-form {
+    box-shadow: none;
+    badkground: transparent;
+    padding: 0;
+}
+.jkl_unit_converter_widget #conversion-form h4,
+.jkl_unit_converter_widget #conversion-form #equal-sign {
+    display: none;
+}
+.jkl_unit_converter_widget #conversion-form #list-options {
+    margin-bottom: -1px;
+}
+.jkl_unit_converter_widget #conversion-units .from-div,
+.jkl_unit_converter_widget #conversion-units .to-div {
+    float: none;
+    width: 100%;
+    margin: 0;
+}
+.jkl_unit_converter_widget #conversion-units .from-div {
+    /*margin-bottom: 1em;*/
+}
+.jkl_unit_converter_widget #conversion-form input[type="submit"] {
+    display: block;
+    clear: both; 
+    margin-top: 0.5em;
+}
+
+/*
+ * Responsive styles
+ */
+@media screen and ( max-width: 680px ) {
+    #conversion-form #list-options {
+        margin-bottom: 3px;
+    }
+}
+@media screen and ( max-width: 550px ) {
+    #conversion-form #equal-sign {
+        display: none;
+    }
+            .post #conversion-units .from-div,
+            .post #conversion-units .to-div {
+                float: none;
+                width: 100%;
+                margin: 0;
+            }
+            .post #conversion-units .from-div {
+                /*margin-bottom: 1em;*/
+            }
+}
+@media screen and ( max-width: 350px ) {
+    #conversion-form input[type="submit"] {
+        display: block;
+        clear: both; 
+        margin-top: 0.5em;
+    }
 }
